--- a/Health37/AllClasses/LoginSignupScreen/LoginSignupScreen.xib
+++ b/Health37/AllClasses/LoginSignupScreen/LoginSignupScreen.xib
@@ -35,6 +35,8 @@
                 <outlet property="btnTermsConditions" destination="z5n-cP-QS6" id="Ir8-Id-aAS"/>
                 <outlet property="hospitalNameTF" destination="Yhz-uU-YHY" id="fhX-5R-5Ky"/>
                 <outlet property="imgBackGround" destination="n6u-dc-fgM" id="EeV-4f-tKV"/>
+                <outlet property="landlineTextField" destination="aSg-sl-C8k" id="m57-si-H4N"/>
+                <outlet property="landlineView" destination="i5h-J4-HCh" id="mHi-8g-i2v"/>
                 <outlet property="lblEmail" destination="8fT-Ga-xpq" id="HUX-NC-yS0"/>
                 <outlet property="lblHeaderForgot" destination="Sks-Rt-3Oq" id="itK-1M-TvG"/>
                 <outlet property="lblPassword" destination="qF8-Ar-5gH" id="7zM-ev-Tb6"/>
@@ -239,7 +241,7 @@
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C3R-ej-c1B">
-                                    <rect key="frame" x="191" y="0.0" width="168" height="2"/>
+                                    <rect key="frame" x="190" y="0.0" width="169" height="2"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxY="YES"/>
                                     <color key="backgroundColor" red="0.0028594916220000001" green="0.59611362219999997" blue="0.62344777579999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -416,15 +418,43 @@
                                         <outlet property="delegate" destination="-1" id="P59-M4-iTe"/>
                                     </connections>
                                 </textField>
+                                <view hidden="YES" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="i5h-J4-HCh">
+                                    <rect key="frame" x="16" y="375" width="343" height="40"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="16" translatesAutoresizingMaskIntoConstraints="NO" id="4TW-bf-dij">
+                                            <rect key="frame" x="0.0" y="0.0" width="343" height="1"/>
+                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                            <color key="backgroundColor" red="0.86274509799999999" green="0.86274509799999999" blue="0.86274509799999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <fontDescription key="fontDescription" name="Lato-Light" family="Lato" pointSize="13"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="phone" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="3Js-2G-GJ8">
+                                            <rect key="frame" x="0.0" y="7" width="24" height="26"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
+                                            <color key="tintColor" red="0.054355211559999998" green="0.59529024360000005" blue="0.62354010339999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        </imageView>
+                                        <textField opaque="NO" tag="12" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Landline Number" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aSg-sl-C8k">
+                                            <rect key="frame" x="30" y="8" width="300" height="24"/>
+                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="15"/>
+                                            <textInputTraits key="textInputTraits" keyboardType="phonePad" enablesReturnKeyAutomatically="YES"/>
+                                            <connections>
+                                                <outlet property="delegate" destination="-1" id="Lgn-8f-OYv"/>
+                                            </connections>
+                                        </textField>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </view>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="By signing up, You agree with Terms and Conditions" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eGX-v6-N5F">
-                                    <rect key="frame" x="33" y="389" width="309" height="29"/>
+                                    <rect key="frame" x="33" y="427" width="309" height="29"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="13"/>
                                     <color key="textColor" red="0.3411764705882353" green="0.3411764705882353" blue="0.3411764705882353" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="z5n-cP-QS6">
-                                    <rect key="frame" x="33" y="389" width="309" height="29"/>
+                                    <rect key="frame" x="33" y="427" width="309" height="29"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <state key="normal">
                                         <attributedString key="attributedTitle"/>
@@ -434,7 +464,7 @@
                                     </connections>
                                 </button>
                                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iej-5K-NXG">
-                                    <rect key="frame" x="83" y="430" width="210" height="39"/>
+                                    <rect key="frame" x="83" y="468" width="210" height="39"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="16"/>
                                     <state key="normal" title="SIGN UP">
@@ -608,6 +638,7 @@
         <image name="logo-big.png" width="86.5" height="86.5"/>
         <image name="mobile.png" width="13.5" height="22.5"/>
         <image name="password_icon.png" width="16.5" height="20.5"/>
+        <image name="phone" catalog="system" width="128" height="115"/>
         <image name="twitter_btn.png" width="50" height="50"/>
         <image name="user_icon.png" width="20" height="20"/>
     </resources>
