--- a/Health37/AllClasses/Arabic_xib/UserDetailUpdate_Arabic.xib
+++ b/Health37/AllClasses/Arabic_xib/UserDetailUpdate_Arabic.xib
@@ -36,6 +36,7 @@
                 <outlet property="txtConfirmPass" destination="ktY-Yy-2lY" id="6I4-uw-kA0"/>
                 <outlet property="txtCountryCode" destination="qZz-0k-CNa" id="3Vt-nm-Rca"/>
                 <outlet property="txtEmail" destination="Aan-yh-92s" id="fQf-la-DUc"/>
+                <outlet property="txtLandlineCode" destination="xjf-cR-3Si" id="JHe-8K-PGk"/>
                 <outlet property="txtMobileNo" destination="XMN-CS-tUN" id="sl0-WE-50l"/>
                 <outlet property="txtNewPassword" destination="yRM-aD-tcI" id="Afo-XT-9ue"/>
                 <outlet property="txtPassword" destination="CaX-FS-4SB" id="SEy-Nf-uaO"/>
@@ -87,7 +88,7 @@
                             </connections>
                         </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oL3-Cg-ha1">
-                            <rect key="frame" x="260" y="0.0" width="1" height="54"/>
+                            <rect key="frame" x="259" y="0.0" width="1" height="54"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" red="0.0039215686269999999" green="0.59607843140000005" blue="0.62352941179999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -95,7 +96,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KDg-hL-HZs">
-                            <rect key="frame" x="111" y="0.0" width="1" height="54"/>
+                            <rect key="frame" x="110" y="0.0" width="1" height="54"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" red="0.0039215686269999999" green="0.59607843140000005" blue="0.62352941179999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -323,8 +324,22 @@
                                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                                     <color key="tintColor" red="0.054355211559999998" green="0.59529024360000005" blue="0.62354010339999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </imageView>
+                                <textField opaque="NO" tag="100" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="+1" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xjf-cR-3Si">
+                                    <rect key="frame" x="272" y="8" width="45" height="24"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="15"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                    <connections>
+                                        <outlet property="delegate" destination="-1" id="gXd-ql-dCL"/>
+                                    </connections>
+                                </textField>
+                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="arrowDown.png" translatesAutoresizingMaskIntoConstraints="NO" id="XwG-dh-4kf">
+                                    <rect key="frame" x="272" y="15" width="10" height="10"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
+                                </imageView>
                                 <textField opaque="NO" tag="12" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Landline Number" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bX0-nA-I0n">
-                                    <rect key="frame" x="30" y="8" width="285" height="24"/>
+                                    <rect key="frame" x="10" y="8" width="250" height="24"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                     <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="15"/>
                                     <textInputTraits key="textInputTraits" keyboardType="phonePad" enablesReturnKeyAutomatically="YES"/>
